[package]
name = "reflect"
version = "0.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The \"but I thought Rust doesn't have reflection?\" memorial brand new way of defining procedural macros."
repository = "https://github.com/dtolnay/reflect"
documentation = "https://docs.rs/reflect"
keywords = ["reflection"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "dtolnay/reflect" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
ref-cast = "0.2"
reflect-internal = { version = "0.0.4", path = "macros" }
syn = "1.0"

[build-dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[workspace]
members = ["macros"]
