[package]
name = "reflect"
version = "0.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The \"but I thought Rust doesn't have reflection?\" memorial brand new way of defining procedural macros."
repository = "https://github.com/dtolnay/reflect"
documentation = "https://docs.rs/reflect"
keywords = ["reflection"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
edition = "2018"
rust-version = "1.33"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
ref-cast = "1.0"
reflect-internal = { version = "0.0.4", path = "macros" }
syn = "1.0"

[workspace]
members = ["macros"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
