[package]
name = "reflect"
version = "0.0.15"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "The \"but I thought Rust doesn't have reflection?\" memorial brand new way of defining procedural macros."
documentation = "https://docs.rs/reflect"
edition = "2021"
keywords = ["reflection"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/reflect"
rust-version = "1.71"

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
ref-cast = "1.0.18"
reflect-internal = { version = "=0.0.15", path = "macros" }
syn = "2.0.23"

[workspace]
members = ["macros"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
