[package]
name = "reflect-internal"
version = "0.0.4"
authors = ["Asbjørn Gaarde <asbjorn_gaarde@hotmail.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros required by the `reflect` crate."
repository = "https://github.com/8BitMate/reflect"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features  = ["extra-traits"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
