[package]
name = "reflect-internal"
version = "0.0.11"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Procedural macros required by the `reflect` crate."
repository = "https://github.com/dtolnay/reflect"
edition = "2018"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
