[package]
name = "reflect-internal"
version = "0.0.12"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Procedural macros required by the `reflect` crate."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/reflect"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.23"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
